WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59210
WebKit2: Stop Responsiveness Timer when WebPageProxy closes or WebProcess crashes
https://bugs.webkit.org/show_bug.cgi?id=59210
Summary
WebKit2: Stop Responsiveness Timer when WebPageProxy closes or WebProcess cra...
Brian Weinstein
Reported
2011-04-22 10:30:36 PDT
We should stop the responsiveness timer when a WebPageProxy closes or when the WebProcess crashes.
Attachments
[PATCH] Fix
(1.50 KB, patch)
2011-04-22 10:33 PDT
,
Brian Weinstein
sam
: review-
Details
Formatted Diff
Diff
[PATCH] Fix v2
(1.51 KB, patch)
2011-04-22 10:43 PDT
,
Brian Weinstein
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2011-04-22 10:33:22 PDT
Created
attachment 90721
[details]
[PATCH] Fix
Sam Weinig
Comment 2
2011-04-22 10:35:58 PDT
Comment on
attachment 90721
[details]
[PATCH] Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=90721&action=review
> Source/WebKit2/UIProcess/WebPageProxy.cpp:182 > + process()->responsivenessTimer()->stop();
This should probably be in close(), not the destructor.
Brian Weinstein
Comment 3
2011-04-22 10:43:03 PDT
Created
attachment 90723
[details]
[PATCH] Fix v2
Sam Weinig
Comment 4
2011-04-22 10:45:03 PDT
Comment on
attachment 90723
[details]
[PATCH] Fix v2 View in context:
https://bugs.webkit.org/attachment.cgi?id=90723&action=review
> Source/WebKit2/UIProcess/WebPageProxy.cpp:357 > + process()->responsivenessTimer()->stop();
The remove webpage thing call should be last, please move this above the call to process()->send(Messages::WebPage::Close(), m_pageID) to keep consistency.
Brian Weinstein
Comment 5
2011-04-22 10:47:36 PDT
Landed in
r84643
.
Adam Roben (:aroben)
Comment 6
2011-04-29 11:25:36 PDT
For posterity's sake: The issue this was trying to fix was: clicking the "close" button in the docked Web Inspector would cause the UI process to think the web process had become unresponsive. Our theory for why this was happening was that the Web Inspector's WebPage wasn't having time to send the DidHandleEvent message back to the UI process before it was closed. Thus we tried to fix the issue by always stopping the responsiveness timer whenever a WebPage gets closed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug