WebKit2: Stop Responsiveness Timer when WebPageProxy closes or WebProcess crashes https://bugs.webkit.org/show_bug.cgi?id=59210

Reviewed by Sam Weinig.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close): Stop the responsiveness timer.
(WebKit::WebPageProxy::processDidCrash): Ditto.



git-svn-id: svn://svn.chromium.org/blink/trunk@84643 bbb929c8-8fbe-4397-9dbb-9b2b20218538