third_party/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -354,6 +354,8 @@ void WebPageProxy::close()
 
     m_drawingArea.clear();
 
+    process()->responsivenessTimer()->stop();
+
     process()->send(Messages::WebPage::Close(), m_pageID);
     process()->removeWebPage(m_pageID);
 }
@@ -2804,6 +2806,8 @@ void WebPageProxy::processDidCrash()
     dismissCorrectionPanel(ReasonForDismissingCorrectionPanelIgnored);
     m_pageClient->dismissDictionaryLookupPanel();
 #endif
+
+    process()->responsivenessTimer()->stop();
 }
 
 WebPageCreationParameters WebPageProxy::creationParameters() const
